language_tests/outputs/invalid/ufcs.out
error: expected &{var(0)}, found Human
 -> language_tests/source_files/invalid/ufcs.tr:38:23
	    SpeakerByRef.greet(h)
	                       ^
error: expected &mut {var(0)}, found Counter
 -> language_tests/source_files/invalid/ufcs.tr:41:30
	    SpeakerByMutRef.increment(c)
	                              ^
error: mutability mismatch: expected {var(0)}, found Counter (reference mutabilities differ)
 -> language_tests/source_files/invalid/ufcs.tr:44:30
	    SpeakerByMutRef.increment(&c)
	                              ^^
